--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -13,14 +13,17 @@ tags: ['Bitcoin', 'Lightning', 'ecash']
 bonusUSD: 1000000
 ---
 
+GrapheneOS is a private and secure mobile operating system for Android devices
+developed as a non-profit open-source project.
 
-GrapheneOS improves the privacy and security of the OS, starting from the strong
-baseline of the Android Open Source Project (AOSP). Rather than branding and
-marketing, GrapheneOS focuses on substance, meaning that security is paramount
-over unhelpful frills or third-party app choices.
+As a custom operating system, GrapheneOS improves the privacy and security of
+your phone. Built upon the Android Open Source Project (AOSP), it offers a solid
+base for privacy-conscious users. Rather than branding and marketing, GrapheneOS
+focuses on substance, meaning that security is paramount over unhelpful frills
+or third-party app choices. 
 
 GrapheneOS offers increased protection from 0-day exploits and other
-vulnerabilities due to a reduced attack surface and hardened components.
+vulnerabilities due to a reduced attack surface and hardened components. 
 
 The core features that GrapheneOS offers its users are:
 
