Fix markdown violations

--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -20,10 +20,10 @@ As a custom operating system, GrapheneOS improves the privacy and security of
 your phone. Built upon the Android Open Source Project (AOSP), it offers a solid
 base for privacy-conscious users. Rather than branding and marketing, GrapheneOS
 focuses on substance, meaning that security is paramount over unhelpful frills
-or third-party app choices. 
+or third-party app choices.
 
 GrapheneOS offers increased protection from 0-day exploits and other
-vulnerabilities due to a reduced attack surface and hardened components. 
+vulnerabilities due to a reduced attack surface and hardened components.
 
 The core features that GrapheneOS offers its users are:
 
@@ -42,4 +42,4 @@ Other valuable features include:
 
 The operating system is easy to install on most modern Pixel devices.[^fn-supported-devices]
 
-[^fn-supported-devices]: https://grapheneos.org/faq#supported-devices
+[^fn-supported-devices]: <https://grapheneos.org/faq#supported-devices>
