--- a/data/authors/karnage.mdx
+++ b/data/authors/karnage.mdx
@@ -9,8 +9,12 @@ github: https://github.com/karnagebitcoin
 design: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi blandit odio lacinia, viverra quam eget, dapibus nibh. Donec nec placerat ligula. Ut venenatis tincidunt ante. Suspendisse consectetur lobortis sodales. Mauris dignissim nulla ipsum, in condimentum ligula lobortis sed. In vehicula nisi eu felis pellentesque pharetra. Sed semper tortor sed metus accumsan, et efficitur justo finibus. Proin ullamcorper augue in sem efficitur eleifend. Duis vitae arcu sit amet orci mattis feugiat nec in nisi. Donec a dolor gravida arcu commodo dapibus. Phasellus ac sapien vitae ligula laoreet molestie. Aenean nunc tortor, hendrerit in dolor nec, dapibus consectetur sapien. Vivamus ut felis ut augue sagittis ultrices.
+Karnage? What can we say about him? Besides writing his own bio, he loves re-arranging pixels and obsesses over product experiences.  He started off designing and developing his own websites decades ago and never stopped.
 
-Mauris ac fringilla metus. Nulla venenatis iaculis purus et euismod. Nunc placerat ante purus, sed luctus eros consequat sit amet. Vivamus aliquam interdum tortor. Sed ut nisl sollicitudin, feugiat turpis at, tincidunt erat. Suspendisse euismod scelerisque dignissim. Vestibulum sagittis sollicitudin eleifend. Morbi vestibulum efficitur orci ac volutpat.
+Sure, there were career path deviations here and there (SEO “person”, startup founder, self-proclaimed copywriter, CRO consultant, not-so-good developer) but the cat is back at it, doing his best to make Nostr look and function better. 
 
-Donec lectus ligula, euismod quis lacinia quis, fermentum eu nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent a libero vel nibh auctor vehicula at in mi. Vivamus convallis mauris sit amet volutpat laoreet. Morbi gravida vitae dolor eget tempus. Curabitur lacinia arcu vitae diam eleifend, ornare ornare tortor mattis. In tempus turpis varius eros malesuada, vitae malesuada odio dignissim. Quisque mattis rutrum nibh a posuere. Donec tristique augue velit, et finibus quam sollicitudin eu. Maecenas pulvinar convallis condimentum. Nunc quis lobortis mauris, quis placerat mi. Vivamus sed varius tellus. Donec est risus, venenatis vitae quam porta, facilisis bibendum purus. Donec commodo, ipsum nec rutrum ultricies, sem mauris luctus justo, blandit lobortis felis mi at velit. Integer quis nunc eu felis laoreet placerat.
+You may have seen or used some of the Bitcoin-related projects touched by his paws: BTCMap, Coinos, Bitcoin Myths, DvadesetJedan, Stratum V2 website, The Bitcoin Company website. 
+
+You may have also laid eyes upon some of the nostr things he has designed: Snort.social, Zap.stream, Habla.news, Badges.page, Zapstr, Nostr Nests, heynostr.com, nostrapps.com, and a bunch of Figma files that have yet to make it into real products.
+
+If asked about his values, Karnage might mention privacy, curiosity, autonomy, objectivity, empathy and humor. He thinks Nostr is the purple delivery system for the orange pill and will do everything in his power to bring it to this planet’s population until we colonize another.
