Clarify that donation goes to operations

--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -40,7 +40,7 @@ believe that bitcoin has the potential to change the world.
 
 There are many ways that you can help OpenSats achieve its mission. You can:
 
-- [Donate] to OpenSats
+- [Donate] to our operations
 - [Volunteer] your time to OpenSats
 - [Spread the word] about OpenSats
 
