--- a/data/authors/karnage.mdx
+++ b/data/authors/karnage.mdx
@@ -4,6 +4,7 @@ nym: karnagebitcoin
 avatar: /static/images/design/karnage.jpg
 occupation: Designer
 company: OpenSats
+email: karnage@opensats.org
 nostr: npub1r0rs5q2gk0e3dk3nlc7gnu378ec6cnlenqp8a3cjhyzu6f8k5sgs4sq9ac
 github: https://github.com/karnagebitcoin
 design: true
