--- a/data/authors/dtonon.mdx
+++ b/data/authors/dtonon.mdx
@@ -4,6 +4,7 @@ nym: dtonon
 avatar: /static/images/design/dtonon.jpg
 occupation: Product designer, Developer
 company: OpenSats
+email: dtonon@opensats.org
 nostr: npub10000003zmk89narqpczy4ff6rnuht2wu05na7kpnh3mak7z2tqzsv8vwqk
 github: https://github.com/dtonon
 design: true
