--- a/data/authors/dtonon.mdx
+++ b/data/authors/dtonon.mdx
@@ -10,11 +10,18 @@ github: https://github.com/dtonon
 design: true
 ---
 
-Daniele is an entrepreneur who grew up in the web space starting in the late 90s, developing e-commerce platforms, online services and management software with the goal of bringing value to businesses and improving the final users' experience with helpful and pleasant tools.
+Daniele is an entrepreneur who grew up in the web space starting in the late
+90s, developing e-commerce platforms, online services and management software
+with the goal of bringing value to businesses and improving the final users'
+experience with helpful and pleasant tools.
 
-From mid-2022 on, he is following Nostr's development, where he is actively involved in the design of major clients, most notably Gossip and Coracle, as well as various tools such as the Njump static content gateway that is part of *nostr.com*.
+From mid-2022 on, he is following Nostr's development, where he is actively
+involved in the design of major clients, most notably Gossip and Coracle, as
+well as various tools such as the Njump static content gateway that is part of
+*nostr.com*.
 
-He is passionate about design, user experience and software development, he puts accessibility, sustainability and privacy as the core values of his activities.
+He is passionate about design, user experience and software development, he puts
+accessibility, sustainability and privacy as the core values of his activities.
 
 ### PGP Key
 
