--- a/data/authors/karnage.mdx
+++ b/data/authors/karnage.mdx
@@ -10,12 +10,24 @@ github: https://github.com/karnagebitcoin
 design: true
 ---
 
-Karnage? What can we say about him? Besides writing his own bio, he loves re-arranging pixels and obsesses over product experiences.  He started off designing and developing his own websites decades ago and never stopped.
+Karnage? What can we say about him? Besides writing his own bio, he loves
+re-arranging pixels and obsesses over product experiences.  He started off
+designing and developing his own websites decades ago and never stopped.
 
-Sure, there were career path deviations here and there (SEO “person”, startup founder, self-proclaimed copywriter, CRO consultant, not-so-good developer) but the cat is back at it, doing his best to make Nostr look and function better. 
+Sure, there were career path deviations here and there (SEO “person”, startup
+founder, self-proclaimed copywriter, CRO consultant, not-so-good developer) but
+the cat is back at it, doing his best to make Nostr look and function better.
 
-You may have seen or used some of the Bitcoin-related projects touched by his paws: BTCMap, Coinos, Bitcoin Myths, DvadesetJedan, Stratum V2 website, The Bitcoin Company website. 
+You may have seen or used some of the Bitcoin-related projects touched by his
+paws: BTCMap, Coinos, Bitcoin Myths, DvadesetJedan, Stratum V2 website, The
+Bitcoin Company website.
 
-You may have also laid eyes upon some of the nostr things he has designed: Snort.social, Zap.stream, Habla.news, Badges.page, Zapstr, Nostr Nests, heynostr.com, nostrapps.com, and a bunch of Figma files that have yet to make it into real products.
+You may have also laid eyes upon some of the nostr things he has designed:
+Snort.social, Zap.stream, Habla.news, Badges.page, Zapstr, Nostr Nests,
+heynostr.com, nostrapps.com, and a bunch of Figma files that have yet to make it
+into real products.
 
-If asked about his values, Karnage might mention privacy, curiosity, autonomy, objectivity, empathy and humor. He thinks Nostr is the purple delivery system for the orange pill and will do everything in his power to bring it to this planet’s population until we colonize another.
+If asked about his values, Karnage might mention privacy, curiosity, autonomy,
+objectivity, empathy and humor. He thinks Nostr is the purple delivery system
+for the orange pill and will do everything in his power to bring it to this
+planet’s population until we colonize another.
