--- a/data/authors/karnage.mdx
+++ b/data/authors/karnage.mdx
@@ -11,7 +11,7 @@ design: true
 ---
 
 Karnage? What can we say about him? Besides writing his own bio, he loves
-re-arranging pixels and obsesses over product experiences.  He started off
+re-arranging pixels and obsesses over product experiences. He started off
 designing and developing [his own websites](https://karnage.webflow.io/) decades
 ago and never stopped.
 
@@ -29,7 +29,7 @@ Nests][NN], [heynostr.com], [nostrapps.com], and a bunch of Figma files that hav
 yet to make it into real products.
 
 If asked about his values, Karnage might mention privacy, curiosity, autonomy,
-objectivity, empathy and humor. He thinks Nostr is the purple delivery system
+objectivity, empathy, and humor. He thinks Nostr is the purple delivery system
 for the orange pill and will do everything in his power to bring it to this
 planet’s population until we colonize another.
 
