--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -12,10 +12,9 @@ Like bitcoin, it is an open protocol that has the potential to revolutionize the
 way we think about individual sovereignty and liberty.
 
 To aid the various development efforts that are being made in the nostr
-ecosystem, we created [The Nostr Fund](https://opensats.org/projects/nostr) to
-provide funding for open-source projects. If you would like to join us in
-helping with these efforts, please reach out to us or [donate to the
-fund](https://opensats.org/projects/nostr).
+ecosystem, we created *The Nostr Fund* to provide funding for open-source
+projects. If you would like to join us in helping with these efforts, please
+reach out to us or [donate to the fund](https://opensats.org/projects/nostr).
 
 If you are an open-source developer working on notes and other stuff transmitted
 by relays, don't hesitate to [apply for funding][apply].
@@ -31,31 +30,26 @@ principles, and best practices that will help developers solve the unique user
 experience challenges that nostr poses.
 
 In addition to nostrdesign.org, two of our grantees are dedicating time to help
-projects that need help with design and general UI/UX improvements. 
+projects that need help with design and general UI/UX improvements.
 
-The first one is `@karnage`, who brings a lot of experience and expertise from
+The first one is [Karnage], who brings a lot of experience and expertise from
 the world of bitcoin product design. Karnage was involved in the development of
-multiple nostr clients and is the brain behind *Hey Nostr*[^fn-hey] and
-*Nostr Apps*.[^fn-apps]
+multiple nostr clients and is the brain behind *Hey Nostr* and
+*Nostr Apps*.
 
-The second one is `@dtonon`, who is
+The second one is [Daniele], who is
 actively involved in the design of major clients, most notably Gossip and
 Coracle, as well as various tools such as the static content gateway that is
-part of *nostr.com*.[^fn-nostr-com]
-
-[^fn-hey]: [heynostr.com](https://www.heynostr.com/)
-[^fn-apps]: [nostrapps.com](https://www.nostrapps.com/)
-[^fn-nostr-com]: [nostr.com/npub10pensat...](https://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f)
+part of *nostr.com*.
 
 ## Need Help?
 
 Are you working on an open-source project that needs some design help? Want to
-improve the UX of your app? Reach out to `design@opensats.org` or to [Karnage] &
-[Daniele] directly.
+improve the UX of your app? Reach out to `design@opensats.org` or to Karnage &
+Daniele directly.
 
 [Karnage]: /about/karnage
 [Daniele]: /about/dtonon
 
 [apply]: /apply
 [mission]: /mission
-[The Nostr Fund]: /projects/nostr
