Show email as `mailto:` link

--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -45,7 +45,7 @@ part of *nostr.com*.
 ## Need Help?
 
 Are you working on an open-source project that needs some design help? Want to
-improve the UX of your app? Reach out to `design@opensats.org` or to Karnage &
+improve the UX of your app? Reach out to design@opensats.org or to Karnage &
 Daniele directly.
 
 [Karnage]: /about/karnage
@@ -53,3 +53,4 @@ Daniele directly.
 
 [apply]: /apply
 [mission]: /mission
+
