--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -11,15 +11,16 @@ protocols that help bitcoin flourish. We believe that nostr is such a protocol.
 Like bitcoin, it is an open protocol that has the potential to revolutionize the
 way we think about individual sovereignty and liberty.
 
-To aid the various development efforts that are being made in the nostr
-ecosystem, we created *The Nostr Fund* to provide funding for open-source
-projects. If you would like to join us in helping with these efforts, please
-reach out to us or [donate to the fund](https://opensats.org/projects/nostr).
+To aid the various development efforts that are being made in this strange new
+world, we created *The Nostr Fund* to provide funding for open-source projects
+in the nostr ecosystem. If you would like to join us in helping with these
+efforts, please reach out to us or [donate to the
+fund](https://opensats.org/projects/nostr).
 
 If you are an open-source developer working on notes and other stuff transmitted
 by relays, don't hesitate to [apply for funding][apply].
 
-# Nostr Design
+## Nostr Design
 
 In addition to providing funding to projects, we offer to help with design work
 if your open-source project needs it.
