Update description of The Nostr Fund

--- a/data/projects/nostr.mdx
+++ b/data/projects/nostr.mdx
@@ -21,4 +21,7 @@ The fund is used to support projects that make Nostr more accessible, secure,
 decentralized, and easy to use. It also helps to support projects that educate
 people about Nostr and its potential.
 
-If you want to help, you can donate sats or fiat currency to the fund [here](#top).
+The [Nostr Design](/nostr) initiative is made possible thanks to this fund, as
+is the financial support of many projects in the [nostr ecosystem](/tags/nostr).
+
+Your donation to *The Nostr Fund* helps support these efforts.
