Fix markdown issue

--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -42,4 +42,4 @@ Other valuable features include:
 
 The operating system is easy to install on most modern Pixel devices.[^fn-supported-devices]
 
-[^fn-supported-devices]: <https://grapheneos.org/faq#supported-devices>
+[^fn-supported-devices]: https://grapheneos.org/faq#supported-devices
