--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -13,6 +13,33 @@ tags: ['Bitcoin', 'Lightning', 'ecash']
 bonusUSD: 1000000
 ---
 
-## About this project
+GrapheneOS is a private and secure mobile operating system for Android devices
+developed as a non-profit open-source project.
 
-GrapheneOS is a private and secure mobile operating system with great functionality and usability. It starts from the strong baseline of the Android Open-Source Project (AOSP) and takes great care to avoid increasing attack surface or hurting the strong security model. GrapheneOS makes substantial improvements to both privacy and security through many carefully designed features built to function against real adversaries. The project cares a lot about usability and app compatibility so those are taken into account for all of our features.
+As a custom operating system, GrapheneOS improves the privacy and security of
+your phone. Built upon the Android Open Source Project (AOSP), it offers a solid
+base for privacy-conscious users. Rather than branding and marketing, GrapheneOS
+focuses on substance, meaning that security is paramount over unhelpful frills
+or third-party app choices.
+
+GrapheneOS offers increased protection from 0-day exploits and other
+vulnerabilities due to a reduced attack surface and hardened components.
+
+The core features that GrapheneOS offers its users are:
+
+- Exploit mitigations: hardened app runtime, secure application spawning system, hardened `libc` & a first-party hardened memory allocator, etc.
+- Improved sandboxing
+- Anti-persistence/detection
+
+Other valuable features include:
+
+- LTE-only mode
+- Wi-Fi privacy
+- Private screenshots
+- PIN scrambling
+- Privacy by default
+- Longer passwords
+
+The operating system is easy to install on most modern Pixel devices.[^fn-supported-devices]
+
+[^fn-supported-devices]: https://grapheneos.org/faq#supported-devices
