Update dtonon page

--- a/data/authors/dtonon.mdx
+++ b/data/authors/dtonon.mdx
@@ -1,5 +1,5 @@
 ---
-name: Daniele Tonon
+name: Daniele
 nym: dtonon
 avatar: /static/images/design/dtonon.jpg
 occupation: Product designer, Developer
@@ -16,12 +16,14 @@ with the goal of bringing value to businesses and improving the final users'
 experience with helpful and pleasant tools.
 
 From mid-2022 on, he is following Nostr's development, where he is actively
-involved in the design of major clients, most notably Gossip and Coracle, as
-well as various tools such as the Njump static content gateway that is part of
+involved in the design of major clients, most notably [Gossip](https://github.com/mikedilger/gossip) and [Coracle.social](https://coracle.social), as
+well as various tools such as the [Njump](https://github.com/fiatjaf/njump) static content gateway[^1] that is part of
 *nostr.com*.
 
 He is passionate about design, user experience and software development, he puts
 accessibility, sustainability and privacy as the core values of his activities.
+
+[^1]: Njump static content gateway: for an example of use, see the [OpenSats profile](https://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f)
 
 ### PGP Key
 
