Link to nostrdesign.org

--- a/data/blog/announcing-nostr-design.mdx
+++ b/data/blog/announcing-nostr-design.mdx
@@ -48,7 +48,7 @@ You can find us on nostr or email us at design@opensats.org
 ## Improve Your Nostr Client on Your Own Time
 
 Too shy to ask for help? Do you think your client is perfect as it is? We're
-creating a design resource just for you: nostrdesign.org
+creating a design resource just for you: [nostrdesign.org]
 
 [Nostr Design](/nostr) will help developers and designers quickly discover
 nostr's quirks, challenges, and best practices for addressing them. Our goal is
@@ -70,8 +70,7 @@ to X?"
 - Figma files of other open-source projects where you can reference how something was handled in terms of UI or UX
 - A wide range of resources, such as color palettes, font options, typography, color selection, book recommendations, accessibility, courses, videos, icon sets, and more!
 
-Check it out at [nostrdesign.org](https://nostrdesign.org/) & come back often
-for new updates!
+Check it out at [nostrdesign.org] & come back often for new updates!
 
 Nostr is a fast-moving and ever-evolving ecosystem. This resource will continue
 evolving to include the most up-to-date best practices and ideas that make nostr
@@ -83,3 +82,4 @@ design help.
 
 [karnage]: /about/karnage
 [dtonon]: /about/dtonon
+[nostrdesign.org]: https://nostrdesign.org/
