--- a/data/blog/bitcoin-infrastructure-this-decade.mdx
+++ b/data/blog/bitcoin-infrastructure-this-decade.mdx
@@ -8,7 +8,7 @@ images: ['/static/images/blog/08-nifty-infra.jpg']
 summary: "TODO"
 ---
 
-OpenSats aims to be a low-time preference, long-term thinking organization. One good example of this is our recent announcement of the LTS (Long Term Support) program for funding Bitcoin Core contributors with a track record of solid contributions.
+OpenSats aims to be a low-time preference, long-term thinking organization. One good example of this is our recent announcement of the LTS (Long Term Support) program for funding core contributors with a track record of solid contributions.
 
 As an organization, we aim to focus our funding and efforts on open-source code and education projects that will prove to provide long-term value for bitcoin as infrastructure. As such, we prioritize funds to builders and experts who are focused on improving the resilience, accessibility, and reach of bitcoin through important and maybe underfunded work on core technology in the ecosystem.
 
