--- a/data/blog/bitcoin-infrastructure-this-decade.mdx
+++ b/data/blog/bitcoin-infrastructure-this-decade.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'bitcoin', 'infrastructure', 'research']
 draft: false
 authors: ['niftynei']
 images: ['/static/images/blog/08-nifty-infra.jpg']
-summary: "TODO"
+summary: "What will the next decade of bitcoin infrastructure building bring?"
 ---
 
 OpenSats aims to be a low-time preference, long-term thinking organization. One good example of this is our recent announcement of the LTS (Long Term Support) program for funding core contributors with a track record of solid contributions.
