--- a/data/blog/bitcoin-infrastructure-this-decade.mdx
+++ b/data/blog/bitcoin-infrastructure-this-decade.mdx
@@ -31,6 +31,9 @@ Contributing to bitcoin-core is a well-regarded and compensated career choice, w
 
 At OpenSats, we're committed to funding existing and new builders who can help extend and re-enforce the bitcoin tools and ecosystem. We're absolutely thrilled to be able to contribute to supporting the next decade of engineers, protocol designers, and educators who are committed to maintaining and building bitcoin: a robust consensus network that's the most decentralized, accessible, and privacy-preserving as we can humanly accomplish.
 
-If you're working on any of these projects or would like to support the builders and makers who are part of our ecosystem, please consider [applying for a grant](https://opensats.org/apply) or making a donation to our [general fund](https://opensats.org/projects/general_fund).
+If you're working on any of these projects or would like to support the builders and makers who are part of our ecosystem, please consider [applying for a grant][apply] or making a donation to our [general fund][gf].
 
 Here's to another decade of decentralization.
+
+[apply]: /apply
+[gf]: /projects/general_fund
