--- a/data/blog/bitcoin-infrastructure-this-decade.mdx
+++ b/data/blog/bitcoin-infrastructure-this-decade.mdx
@@ -10,11 +10,11 @@ summary: "What will the next decade of bitcoin infrastructure building bring?"
 
 OpenSats aims to be a low-time preference, long-term thinking organization. One good example of this is our recent announcement of the LTS (Long Term Support) program for funding core contributors with a track record of solid contributions.
 
-As an organization, we aim to focus our funding and efforts on open-source code and education projects that will prove to provide long-term value for bitcoin as infrastructure. As such, we prioritize funds to builders and experts who are focused on improving the resilience, accessibility, and reach of bitcoin through important and maybe underfunded work on core technology in the ecosystem.
+As an organization, we aim to focus our funding and efforts on open-source code and education projects that will prove to provide long-term value for Bitcoin as infrastructure. As such, we prioritize funds to builders and experts who are focused on improving the resilience, accessibility, and reach of Bitcoin through important and maybe underfunded work on core technology in the ecosystem.
 
-As infrastructure, it's important that the tech we build supports bitcoin's core values: self-sovereignty through the preservation of anonymity, accessibility, and decentralization. Together, these values build us a system where trustless financial transactions without intermediaries are a touchable reality for all, not an imagined ideal.
+As infrastructure, it's important that the tech we build supports Bitcoin's core values: self-sovereignty through the preservation of anonymity, accessibility, and decentralization. Together, these values build us a system where trustless financial transactions without intermediaries are a touchable reality for all, not an imagined ideal.
 
-Given these goals, what does a bitcoin infrastructure look like a decade from now?
+Given these goals, what does a Bitcoin infrastructure look like a decade from now?
 
 - **Mining:** Transaction selection and block construction are more distributed, returning true value to the mempool as a necessary gossip protocol for the network.
 - **Mempool:** Improvements to the mempool (clusters, package relay, ephemeral anchors) help bitcoin scale through more robust and miner-compatible open infrastructure, providing every bitcoin node with reasonable access to competitive information and rate-setting in the global fee market.
@@ -27,9 +27,9 @@ Given these goals, what does a bitcoin infrastructure look like a decade from no
 
 Contributing to bitcoin-core is a well-regarded and compensated career choice, with a thriving ecosystem of both anonymous and well-known contributors with a variety of funding sources who collaborate to make bitcoin-core more scalable, robust, and modular.
 
-## What will the next decade of bitcoin infrastructure building bring?
+## What will the next decade of Bitcoin infrastructure building bring?
 
-At OpenSats, we're committed to funding existing and new builders who can help extend and re-enforce the bitcoin tools and ecosystem. We're absolutely thrilled to be able to contribute to supporting the next decade of engineers, protocol designers, and educators who are committed to maintaining and building bitcoin: a robust consensus network that's the most decentralized, accessible, and privacy-preserving as we can humanly accomplish.
+At OpenSats, we're committed to funding existing and new builders who can help extend and re-enforce the Bitcoin tools and ecosystem. We're absolutely thrilled to be able to contribute to supporting the next decade of engineers, protocol designers, and educators who are committed to maintaining and building Bitcoin: a robust consensus network that's the most decentralized, accessible, and privacy-preserving as we can humanly accomplish.
 
 If you're working on any of these projects or would like to support the builders and makers who are part of our ecosystem, please consider [applying for a grant][apply] or making a donation to our [general fund][gf].
 
