bitcoin-core -> Bitcoin Core

--- a/data/blog/bitcoin-infrastructure-this-decade.mdx
+++ b/data/blog/bitcoin-infrastructure-this-decade.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'bitcoin', 'infrastructure', 'research']
 draft: false
 authors: ['niftynei']
 images: ['/static/images/blog/09-nifty-infra.jpg']
-summary: "What will the next decade of bitcoin infrastructure building bring?"
+summary: "What will the next decade of building Bitcoin's infrastucture bring?"
 ---
 
 OpenSats aims to be a low-time preference, long-term thinking organization. One good example of this is our recent announcement of the LTS (Long Term Support) program for funding core contributors with a track record of solid contributions.
@@ -17,15 +17,15 @@ As infrastructure, it's important that the tech we build supports Bitcoin's core
 Given these goals, what does a Bitcoin infrastructure look like a decade from now?
 
 - **Mining:** Transaction selection and block construction are more distributed, returning true value to the mempool as a necessary gossip protocol for the network.
-- **Mempool:** Improvements to the mempool (clusters, package relay, ephemeral anchors) help bitcoin scale through more robust and miner-compatible open infrastructure, providing every bitcoin node with reasonable access to competitive information and rate-setting in the global fee market.
+- **Mempool:** Improvements to the mempool (clusters, package relay, ephemeral anchors) help Bitcoin scale through more robust and miner-compatible open infrastructure, providing every Bitcoin node with reasonable access to competitive information and rate-setting in the global fee market.
 - **Layer 2:** A robust and interoperable set of options for "second layer" transaction ledgers, which offer bitcoiners the opportunity to stack and transact at different scales and timeline tradeoffs.
-- **Self-custody:** Accessible and understandable self-custodial tools and education, particularly opportunities for increasing the availability of self-custodianship of bitcoin in layer-2s.
-- **Privacy:** Ongoing research into new protocols that improve bitcoin privacy at the base layer, such as increasing the surface area for multi-party input transactions (Splicing, Payjoin) and network protocols, which increase anonymity and reduce traceability across the public ledger.
-- **Cryptography:** Advances in cutting-edge cryptography (ZKPs, etc.) build new options for trustless light clients, increasing the accessibility of self-sovereign bitcoin to low-end consumer hardware and in regions of spotty internet.
-- **Education:** Educational projects, particularly ones that focus on furthering understanding of the global ledger and bitcoin protocols, building a stronger technical understanding, and empowering individuals as self-sufficient agents and bitcoin holders.
-- **Confidence:** Fuzzing tools and cryptographic research have advanced our confidence in the various implementations of the bitcoin protocol at every level of the stack.
+- **Self-custody:** Accessible and understandable self-custodial tools and education, particularly opportunities for increasing the availability of self-custodianship of Bitcoin in layer-2s.
+- **Privacy:** Ongoing research into new protocols that improve Bitcoin privacy at the base layer, such as increasing the surface area for multi-party input transactions (Splicing, Payjoin) and network protocols, which increase anonymity and reduce traceability across the public ledger.
+- **Cryptography:** Advances in cutting-edge cryptography (ZKPs, etc.) build new options for trustless light clients, increasing the accessibility of self-sovereign Bitcoin to low-end consumer hardware and in regions of spotty internet.
+- **Education:** Educational projects, particularly ones that focus on furthering understanding of the global ledger and Bitcoin protocols, building a stronger technical understanding, and empowering individuals as self-sufficient agents and bitcoin holders.
+- **Confidence:** Fuzzing tools and cryptographic research have advanced our confidence in the various implementations of the Bitcoin protocol at every level of the stack.
 
-Contributing to bitcoin-core is a well-regarded and compensated career choice, with a thriving ecosystem of both anonymous and well-known contributors with a variety of funding sources who collaborate to make bitcoin-core more scalable, robust, and modular.
+Contributing to Bitcoin Core is a well-regarded and compensated career choice, with a thriving ecosystem of both anonymous and well-known contributors with a variety of funding sources who collaborate to make Bitcoin Core more scalable, robust, and modular.
 
 ## What will the next decade of Bitcoin infrastructure building bring?
 
