--- a/data/blog/bitcoin-infrastructure-this-decade.mdx
+++ b/data/blog/bitcoin-infrastructure-this-decade.mdx
@@ -19,7 +19,7 @@ Given these goals, what does a Bitcoin infrastructure look like a decade from no
 - **Mining:** Transaction selection and block construction are more distributed, returning true value to the mempool as a necessary gossip protocol for the network.
 - **Mempool:** Improvements to the mempool (clusters, package relay, ephemeral anchors) help Bitcoin scale through more robust and miner-compatible open infrastructure, providing every Bitcoin node with reasonable access to competitive information and rate-setting in the global fee market.
 - **Layer 2:** A robust and interoperable set of options for "second layer" transaction ledgers, which offer bitcoiners the opportunity to stack and transact at different scales and timeline tradeoffs.
-- **Self-custody:** Accessible and understandable self-custodial tools and education, particularly opportunities for increasing the availability of self-custodianship of Bitcoin in layer-2s.
+- **Self-custody:** Accessible and understandable self-custodial tools and education, particularly opportunities for increasing the availability of self-custodianship of bitcoin in layer-2s.
 - **Privacy:** Ongoing research into new protocols that improve Bitcoin privacy at the base layer, such as increasing the surface area for multi-party input transactions (Splicing, Payjoin) and network protocols, which increase anonymity and reduce traceability across the public ledger.
 - **Cryptography:** Advances in cutting-edge cryptography (ZKPs, etc.) build new options for trustless light clients, increasing the accessibility of self-sovereign Bitcoin to low-end consumer hardware and in regions of spotty internet.
 - **Education:** Educational projects, particularly ones that focus on furthering understanding of the global ledger and Bitcoin protocols, building a stronger technical understanding, and empowering individuals as self-sufficient agents and bitcoin holders.
