--- a/data/blog/bitcoin-infrastructure-this-decade.mdx
+++ b/data/blog/bitcoin-infrastructure-this-decade.mdx
@@ -12,7 +12,7 @@ OpenSats aims to be a low-time preference, long-term thinking organization. One 
 
 As an organization, we aim to focus our funding and efforts on open-source code and education projects that will prove to provide long-term value for Bitcoin as infrastructure. As such, we prioritize funds to builders and experts who are focused on improving the resilience, accessibility, and reach of Bitcoin through important and maybe underfunded work on core technology in the ecosystem.
 
-As infrastructure, it's important that the tech we build supports Bitcoin's core values: self-sovereignty through the preservation of anonymity, accessibility, and decentralization. Together, these values build us a system where trustless financial transactions without intermediaries are a touchable reality for all, not an imagined ideal.
+It's important that the tech we build supports Bitcoin's core values: self-sovereignty through the preservation of anonymity, accessibility, and decentralization. Together, these values build us a system where trustless financial transactions without intermediaries are a tangible reality for all, not an imagined ideal.
 
 Given these goals, what does a Bitcoin infrastructure look like a decade from now?
 
