--- a/data/projects/bitcoindesign.mdx
+++ b/data/projects/bitcoindesign.mdx
@@ -10,7 +10,7 @@ twitter: 'bitcoin_design'
 personalTwitter: 'GBKS'
 zaprite: 'n5NcVW1WcqvS8oI4UFMI'
 btcpay: 'bitcoindesign'
-tags: ['OpenSats', 'Fund', 'Design', 'UX']
+tags: ['Bitcoin', 'Design', 'UX']
 ---
 
 ## About this project
