--- a/data/projects/bitcoindesign.mdx
+++ b/data/projects/bitcoindesign.mdx
@@ -1,22 +1,24 @@
 ---
 title: 'Bitcoin Design Community'
 dateAdded: '2023-03-10'
-summary: 'A free, open-source community resource for designers, developers, and others working on non-custodial Bitcoin products.'
+summary: 'A free, open-source community resource for designers, developers, and others working on non-custodial bitcoin products.'
 nym: 'Christoph Ono'
 website: 'https://bitcoin.design/'
-coverImage: '/static/images/projects/bitcoindesign.png'
+coverImage: '/static/images/projects/bitcoindesign.jpg'
 git: 'https://github.com/BitcoinDesign'
 twitter: 'bitcoin_design'
 personalTwitter: 'GBKS'
 zaprite: 'n5NcVW1WcqvS8oI4UFMI'
 btcpay: 'bitcoindesign'
-tags: ['OpenSats', 'Fund']
+tags: ['Bitcoin', 'Design', 'UX']
 ---
 
 ## About this project
 
 We are helping make bitcoin more intuitive and accessible. As bitcoin’s popularity continues to rise, it is essential that everyone be able to participate in this new economy regardless of technical expertise or geography. That can only happen if creators everywhere have the resources and community necessary to foster better bitcoin experiences.
 
-The Bitcoin Design Community Slack is an open space to discuss and explore everything bitcoin and design. Open standards are part of our foundation, so all of our work can also be found on Github. Everyone is welcome to join and participate. You can also follow along via our newsletter, calendar, social media, BitcoinTV & YouTube.
+The [Bitcoin Design Community](https://bitcoin.design) [Discord](https://discord.gg/K7aQ5PErht) is an open space to discuss and explore everything bitcoin and design. Open standards are part of our foundation, so all of our work can also be found on [Github](https://github.com/BitcoinDesign). Everyone is welcome to join and participate. You can also [follow](https://bitcoin.design/social-media/) along via our [newsletter](http://bitcoindesign.substack.com), [calendar](https://bitcoin.design/calendar/), social media ([Nostr](nostr:npub13s5mxgws70rpxsug96jfvglggackjrxs2ehypwg0prjaxsek42sqd9l03e), [X](http://twitter.com/bitcoin_design)), [BitcoinTV](https://bitcointv.com/a/bitcoin_design/video-channels) & [YouTube](http://youtube.com/c/BitcoinDesign).
 
-The Bitcoin Design Guide, our first community project, is a free, open-source repository for anyone building non-custodial bitcoin products. The guide will eventually cover consumer wallets, merchant interactions, financial applications, and much more. If you’d like to help by providing feedback, submitting ideas, or creating content, check out the list of current issues or join us on Slack.
+The [Bitcoin Design Guide](https://bitcoin.design/guide/), our primary community project, is a free, open-source repository for anyone building non-custodial bitcoin products. The guide covers consumer wallets with more additions on the way, like merchant interactions, financial applications, and more. If you’d like to help by providing feedback, submitting ideas, or creating content, check out the [contribute page](https://bitcoin.design/guide/contribute/) or join us on [Discord](https://discord.gg/K7aQ5PErht).
+
+All donations will be used directly for sustaining community projects and events.
