Switch to njump.me

--- a/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
+++ b/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
@@ -143,7 +143,7 @@ that nostr has in the first place. Solving the problem of jumping in and out of
 the nostr world is what motivated the development of
 [`njump`](https://github.com/fiatjaf/njump), which was redesigned as part of
 these efforts and is now live at
-[nostr.com](https://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f).
+[njump.me](https://njump.me/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f).
 
 In addition to client-specific improvements, generic design modules and
 learnings will be incorporated into the [Nostr
@@ -151,7 +151,7 @@ Design](https://docs.google.com/document/d/1r75wMCSBteQjXKGXELrNdu3wwns5fsgMPwSB
 project for others to use.
 
 Activity: [github.com/dtonon](https://github.com/dtonon)
-[@dtonon](https://nostr.com/npub10000003zmk89narqpczy4ff6rnuht2wu05na7kpnh3mak7z2tqzsv8vwqk)  
+[@dtonon](https://njump.me/npub10000003zmk89narqpczy4ff6rnuht2wu05na7kpnh3mak7z2tqzsv8vwqk)  
 License: MIT
 
 ### Nostr Use-Case Exploration & Education
@@ -168,7 +168,7 @@ series, e.g., explaining how to build upon
 [NDK](https://www.youtube.com/playlist?list=PLWCXpceoxeCKDo73t6VmtbfE_RjSRxs9p).
 
 Activity: [github.com/erskingardner](https://github.com/erskingardner)
-[@jeffg](https://nostr.com/npub1zuuajd7u3sx8xu92yav9jwxpr839cs0kc3q6t56vd5u9q033xmhsk6c2uc)  
+[@jeffg](https://njump.me/npub1zuuajd7u3sx8xu92yav9jwxpr839cs0kc3q6t56vd5u9q033xmhsk6c2uc)  
 License: MIT / GPL-3.0 / CC BY-NC-SA 4.0
 
 ---
