--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -22,22 +22,22 @@ tools and design efforts.
 
 In no particular order, here they are:
 
-- NDK by [@pablof7z](https://nostr.com/npub1l2vyh47mk2p0qlsku7hg0vn29faehy9hy34ygaclpn66ukqp3afqutajft)
-- Habla by [@verbiricha](https://nostr.com/npub107jk7htfv243u0x5ynn43scq9wrxtaasmrwwa8lfu2ydwag6cx2quqncxg)
-- Coracle by [@hodlbod](https://nostr.com/npub1jlrs53pkdfjnts29kveljul2sm0actt6n8dxrrzqcersttvcuv3qdjynqn)
-- Iris by [@mmalmi](https://nostr.com/npub1g53mukxnjkcmr94fhryzkqutdz2ukq4ks0gvy5af25rgmwsl4ngq43drvk)
-- Damus by [@jb55](https://nostr.com/npub1xtscya34g58tk0z605fvr788k263gsu6cy9x0mhnm87echrgufzsevkk5s)
-- rust-nostr & nostr-sdk by [@yukibtc](https://nostr.com/npub1drvpzev3syqt0kjrls50050uzf25gehpz9vgdw08hvex7e0vgfeq0eseet)
-- Nostr Relay NestJS by [@CodyTseng](https://nostr.com/npub1syjmjy0dp62dhccq3g97fr87tngvpvzey08llyt6ul58m2zqpzps9wf6wl)
-- Soapbox by [@alexgleason](https://nostr.com/npub108pv4cg5ag52nq082kd5leu9ffrn2gdg6g4xdwatn73y36uzplmq9uyev6)
-- Code Collaboration over Nostr by [@DanConwayDev](https://nostr.com/npub15qydau2hjma6ngxkl2cyar74wzyjshvl65za5k5rl69264ar2exs5cyejr)
-- Satellite by [@lovvtide](https://nostr.com/npub1lunaq893u4hmtpvqxpk8hfmtkqmm7ggutdtnc4hyuux2skr4ttcqr827lj)
-- Amethyst by [@vitorpamplona](https://nostr.com/npub1gcxzte5zlkncx26j68ez60fzkvtkm9e0vrwdcvsjakxf9mu9qewqlfnj5z)
-- Pinstr by [@sepehr-safari](https://nostr.com/npub18c556t7n8xa3df2q82rwxejfglw5przds7sqvefylzjh8tjne28qld0we7)
-- nostr.build by [@nostr.build](https://nostr.com/npub1nxy4qpqnld6kmpphjykvx2lqwvxmuxluddwjamm4nc29ds3elyzsm5avr7)
-- Gossip by [@mikedilger](https://nostr.com/npub1acg6thl5psv62405rljzkj8spesceyfz2c32udakc2ak0dmvfeyse9p35c)
-- Nostr SDK iOS by [@bryanmontz](http://nostr.com/npub1lua3283nqq0jqy3akatp8tgu5rmsyu0yhpp2rramtxp82mdu7svq2y8wt8)
-- Nostr Design by [@karnage](http://nostr.com/npub1r0rs5q2gk0e3dk3nlc7gnu378ec6cnlenqp8a3cjhyzu6f8k5sgs4sq9ac)
+- NDK by [@pablof7z](https://njump.me/npub1l2vyh47mk2p0qlsku7hg0vn29faehy9hy34ygaclpn66ukqp3afqutajft)
+- Habla by [@verbiricha](https://njump.me/npub107jk7htfv243u0x5ynn43scq9wrxtaasmrwwa8lfu2ydwag6cx2quqncxg)
+- Coracle by [@hodlbod](https://njump.me/npub1jlrs53pkdfjnts29kveljul2sm0actt6n8dxrrzqcersttvcuv3qdjynqn)
+- Iris by [@mmalmi](https://njump.me/npub1g53mukxnjkcmr94fhryzkqutdz2ukq4ks0gvy5af25rgmwsl4ngq43drvk)
+- Damus by [@jb55](https://njump.me/npub1xtscya34g58tk0z605fvr788k263gsu6cy9x0mhnm87echrgufzsevkk5s)
+- rust-nostr & nostr-sdk by [@yukibtc](https://njump.me/npub1drvpzev3syqt0kjrls50050uzf25gehpz9vgdw08hvex7e0vgfeq0eseet)
+- Nostr Relay NestJS by [@CodyTseng](https://njump.me/npub1syjmjy0dp62dhccq3g97fr87tngvpvzey08llyt6ul58m2zqpzps9wf6wl)
+- Soapbox by [@alexgleason](https://njump.me/npub108pv4cg5ag52nq082kd5leu9ffrn2gdg6g4xdwatn73y36uzplmq9uyev6)
+- Code Collaboration over Nostr by [@DanConwayDev](https://njump.me/npub15qydau2hjma6ngxkl2cyar74wzyjshvl65za5k5rl69264ar2exs5cyejr)
+- Satellite by [@lovvtide](https://njump.me/npub1lunaq893u4hmtpvqxpk8hfmtkqmm7ggutdtnc4hyuux2skr4ttcqr827lj)
+- Amethyst by [@vitorpamplona](https://njump.me/npub1gcxzte5zlkncx26j68ez60fzkvtkm9e0vrwdcvsjakxf9mu9qewqlfnj5z)
+- Pinstr by [@sepehr-safari](https://njump.me/npub18c556t7n8xa3df2q82rwxejfglw5przds7sqvefylzjh8tjne28qld0we7)
+- nostr.build by [@nostr.build](https://njump.me/npub1nxy4qpqnld6kmpphjykvx2lqwvxmuxluddwjamm4nc29ds3elyzsm5avr7)
+- Gossip by [@mikedilger](https://njump.me/npub1acg6thl5psv62405rljzkj8spesceyfz2c32udakc2ak0dmvfeyse9p35c)
+- Nostr SDK iOS by [@bryanmontz](http://njump.me/npub1lua3283nqq0jqy3akatp8tgu5rmsyu0yhpp2rramtxp82mdu7svq2y8wt8)
+- Nostr Design by [@karnage](http://njump.me/npub1r0rs5q2gk0e3dk3nlc7gnu378ec6cnlenqp8a3cjhyzu6f8k5sgs4sq9ac)
 
 The projects above have received grants of various durations and sizes, and we
 have more nostr-related applications in the pipeline. [Donate to The Nostr
