--- a/data/blog/sjors-provoost-receives-opensats-lts-grant.mdx
+++ b/data/blog/sjors-provoost-receives-opensats-lts-grant.mdx
@@ -36,7 +36,7 @@ writing code himself, though.
 Sjors has done in-depth reviews of the `guix` build system, P2P code, parts of
 Taproot, `assumeutxo`, tests, and the GUI. You can follow his activity on
 [GitHub](https://github.com/Sjors) and
-[nostr](https://nostr.com/npub1s6z7hmmx2vud66f3utxd70qem8cwtggx0jgc7gh8pqwz2k8cltuqrdwk4c).
+[nostr](https://njump.me/npub1s6z7hmmx2vud66f3utxd70qem8cwtggx0jgc7gh8pqwz2k8cltuqrdwk4c).
 
 Support for Sjors’ work is sourced from our General Fund and made possible by
 generous donors like you. If you would like to support the work of Sjors and
