--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -48,4 +48,4 @@ Every little bit helps. Thank you for your support!
 
 [Donate]: /projects/opensats_operations_budget
 [Volunteer]: mailto:volunteer@opensats.org
-[Spread the word]: http://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
+[Spread the word]: http://njump.me/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
