Add Arvin as author

--- a/data/blog/donating-to-opensats.mdx
+++ b/data/blog/donating-to-opensats.mdx
@@ -3,7 +3,7 @@ title: "Navigating Donations to OpenSats: A Comprehensive Guide"
 date: '2023-09-30'
 tags: ['OpenSats', 'bitcoin', 'fiat', 'donations']
 draft: false
-authors: ['Arvin']
+authors: ['arvin']
 images: ['/static/images/blog/08-nostr-design.jpg']
 summary: "TODO"
 ---
