Link to blog post

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -5,4 +5,6 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-TODO
+TODO: add donate buttons, add links to DAF widget, etc.
+
+For details see our blog post: [Navigating Donations to OpenSats: A Comprehensive Guide](/blog/donating-to-opensats)
