--- a/data/projects/bitcoindesign.mdx
+++ b/data/projects/bitcoindesign.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Bitcoin Design Community'
 dateAdded: '2023-03-10'
-summary: 'A free, open-source community resource for designers, developers, and others working on non-custodial bitcoin products.'
+summary: 'Helping to make Bitcoin more intuitive and accessible.'
 nym: 'Christoph Ono'
 website: 'https://bitcoin.design/'
 coverImage: '/static/images/projects/bitcoindesign.jpg'
@@ -15,10 +15,4 @@ tags: ['Bitcoin', 'Design', 'UX']
 
 ## About this project
 
-We are helping make bitcoin more intuitive and accessible. As bitcoin’s popularity continues to rise, it is essential that everyone be able to participate in this new economy regardless of technical expertise or geography. That can only happen if creators everywhere have the resources and community necessary to foster better bitcoin experiences.
-
-The [Bitcoin Design Community](https://bitcoin.design) [Discord](https://discord.gg/K7aQ5PErht) is an open space to discuss and explore everything bitcoin and design. Open standards are part of our foundation, so all of our work can also be found on [Github](https://github.com/BitcoinDesign). Everyone is welcome to join and participate. You can also [follow](https://bitcoin.design/social-media/) along via our [newsletter](http://bitcoindesign.substack.com), [calendar](https://bitcoin.design/calendar/), social media ([Nostr](nostr:npub13s5mxgws70rpxsug96jfvglggackjrxs2ehypwg0prjaxsek42sqd9l03e), [X](http://twitter.com/bitcoin_design)), [BitcoinTV](https://bitcointv.com/a/bitcoin_design/video-channels) & [YouTube](http://youtube.com/c/BitcoinDesign).
-
-The [Bitcoin Design Guide](https://bitcoin.design/guide/), our primary community project, is a free, open-source repository for anyone building non-custodial bitcoin products. The guide covers consumer wallets with more additions on the way, like merchant interactions, financial applications, and more. If you’d like to help by providing feedback, submitting ideas, or creating content, check out the [contribute page](https://bitcoin.design/guide/contribute/) or join us on [Discord](https://discord.gg/K7aQ5PErht).
-
-All donations will be used directly for sustaining community projects and events.
+An open space to discuss and explore everything bitcoin and design. The first community project is the Bitcoin Design Guide, a free and open-source repository for anyone building non-custodial Bitcoin products. Other projects aim to help with things like getting unified QR codes, promoting BOLT 12 adoption, and creating a Bitcoin Icon set.
